# Flowbee.ai

./: .env  Dockerfile  README.md  docker-compose.yml  improved.py  linkedin_post_data.csv  pyproject.toml  tempCodeRunnerFile.py
trails/: databaseconnect.py  ground..py  improvedtrail.py  linedintrail.py  linkedin.py  openai.py  tempCodeRunnerFile.py
